--- a/firstview-lettings-home.html
+++ b/firstview-lettings-home.html
@@ -4,11 +4,12 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="firstview-lettings.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Firstview Lettings</title>
     <style>
     </style>
-<link href="https://fonts.googleapis.com/css2?family=Arimo:wght@700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Adamina&family=Domine&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Domine&family=Lato&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Mukta&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Arimo:wght@700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Domine&family=Lato&display=swap" rel="stylesheet">
+
   </head>
     <body>
 
@@ -16,116 +17,184 @@
           <header class="main-header">
               <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
                   <nav class="main-nav">
-
-
-                        <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
-
-
+                        <li><a  href="firstview-lettings-home.html">Home</a></li>
                     <nav class="dropdown">
                       <ul>
-                        <li><a href="#">Landlords</a></li>
+                        <li><a href="landlords.html">Landlords</a></li>
                               <div class="dropdown-content">
+                                <ul>
                                 <li><a href="tenancy_application.html">Tenancy Applications</a></li>
                                 <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
                                 <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
                                 <li><a href="letting-management.html">Letting Management Service</a></li>
+                              </ul>
                               </div>
                       </ul>
                     </nav>
                     <nav class="dropdown">
                       <ul>
-                        <li><a href="#">Tenants</a></li>
+                        <li><a href="tenants.html">Tenants</a></li>
                               <div class="dropdown-content">
+                                <ul>
                                 <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                                <li><a href="tenant-enquiry.html">Tenant Enquiries</a></li>
+                                <li><a href="tenant-enquiries.html">Tenant Enquiries</a></li>
+                              </ul>
                               </div>
                       </ul>
                     </nav>
                     <nav class="dropdown">
                       <ul>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="about-us.html">About Us</a></li>
                               <div class="dropdown-content">
-                                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                                <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                                <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                                <li><a href="letting-management.html">Letting Management Service</a></li>
+                                <ul>
+                                  <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                                  <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                                  <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                                  <li><a href="letting-management.html">Letting Management Service</a></li>
+                                </ul>
                               </div>
                       </ul>
                     </nav>
                     <nav class="dropdown">
                       <ul>
-                        <li><a href="#">Properties</a></li>
-                              <div class="dropdown-content">
-                                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                                <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                                <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                                <li><a href="letting-management.html">Letting Management Service</a></li>
-                              </div>
+                        <li><a href="properties.html">Properties</a></li>
                       </ul>
                     </nav>
                     <nav class="dropdown">
                       <ul>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="php/index-contact.html">Contact Us</a></li>
                               <div class="dropdown-content">
-                                <li><a href="contact-us.html">Enquiry Form</a></li>
-                                <li><a href="#">Telephone Contact: 07834 342897</a></li>
-                                <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                                <li><a href="letting-management.html">Company Details:
-Firstview Lettings Ltd.
-Registration No: 5098005
-
-Registered Office:
-367B Church Rd, Frampton Cotterell, Bristol, BS36 2AQ</a></li>
+                                <ul>
+                                <li><a href="php/index-contact.html">Enquiry Form</a></li>
+                                    </ul>
                               </div>
                       </ul>
                     </nav>
-                    </nav>
+                  </nav>
           </header>
 
          <main>
-              <div class="title-banner">
-                <h1>Providing residential property letting and management services in Nottinghamshire and Derbyshire</h1>
-              </div>
-              <div class="flexy-boi">
-                <p>Providing residential property letting and management services to landlords and tenants in Nottinghamshire and Derbyshire's rural countryside towns and villages.</p>
-                <p>Supporting the varied lifestyles of investment landlords and experienced landlords alike.</p>
-                <p>Beautiful properties perfect for families and individuals.</p>
-              <aside>
-                <!-- <p>Benefit from the convenience and accessibility of our services.</p>  -->
-                  <!-- <p>Property viewing appointments are arranged via email or telephone, and the review and signature of tenancy agreements are completed by return of post.</p> -->
-                  <!-- <p>Our website features modern one and two bedroom apartments, for single or dual occupancy, and houses where larger occupation is preffered or required.</p> -->
-              </aside>
-                          <!-- <p>15+ years of experience</p> -->
-              </div>
-              <span><h2>Services</h2></span>
-                <section class="services">
-                  <ul>
-                    <li>Tenancy Applications</li>
-                    <li>Tenant Introduction Services</li>
-                    <li>Inventory Preparation Services</li>
-                    <li>Letting Management Services</li>
+
+                <div class="index-title">
+                  <h1>Providing residential property letting and management services in Nottinghamshire and Derbyshire</h1>
+                </div>
+
+                <div class="cstandard">
+                <div class="intro">
+                  <div class="opener">
+                    <h3>Trusted and Established</h3>
+                    <p>Since 2004 we've been providing residential property letting and management services to landlords and tenants.</p>
+                    <p>We provide a range of services in Nottinghamshire and Derbyshire's rural countryside towns and villages.</p>
+                    <h3>Reliable and Ready</h3>
+                    <p>We understand the importance of having hands-on and accesible landlords.</p>
+                    <h3>Comprehensive Services</h3>
+                    <p>By offering a range of services we're able to support the varied lifestyles of both investment landlords and experienced landlords, helping them to achieve their goals.</p>
+                    <h3>Modern Living</h3>
+                    <p>Perfect for families and individuals, we offer beautiful properties with modern fittings.</p>
+                </div>
+                  <div>
+                    <h2>Services</h2>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Tenancy Applications</li>
+                    <li class="list-group-item">Tenant Introduction Services</li>
+                    <li class="list-group-item">Tenant Introduction &amp; Inventory Prepartion Services</li>
+                    <li class="list-group-item">Letting Management Services</li>
                   </ul>
-                </section>
-                <section class="contact">
-                  <h2><a href="#">CONTACT</h2>
-                  <p>By Phone:</p>
-                  <p>07834 342897</p>
-                  <p>Email Us:</p>
-                  <a href="mailto:firstview.let@btinternet.com?subject=Enquiries" id="email">firstview.let@btinternet.com</a>
-                </section>
-              </div>
-              <!-- <div class="photo-break">
-              <img src="keys-in-hand.jpg" >
-              <img src="oxford-houses-colorful.jpg" >
-              <img src="rooftops.jpg" >
-              <img src="frontdoors.jpg" >
-              </div> -->
+                </div>
+
+                <!-- <aside> -->
+                  <!-- <p>Benefit from the convenience and accessibility of our services.</p>  -->
+                    <!-- <p>Property viewing appointments are arranged via email or telephone, and the review and signature of tenancy agreements are completed by return of post.</p> -->
+                    <!-- <p>Our website features modern one and two bedroom apartments, for single or dual occupancy, and houses where larger occupation is preffered or required.</p> -->
+                <!-- </aside> -->
+                            <!-- <p>15+ years of experience</p> -->
+                </div>
+                </div>
+
+
+<!-- Test bs4 -->
+<div class="cstandard">
+<div class="line ">
+  <h2 class="heading2">Featured Properties</h2>
+<div class="card-deck">
+  <div class="card .h-100">
+    <img src="images/full-lakeview.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">One Bedroom Flat - Fishponds - Bristol</h5>
+      <p class="card-text">Modern one bedroom, secure second floor flat, 1 mile from city center.</p>
+      <a href="lakeview-apartments.html" class="btn btn-outline-danger">More Info</a>
+    </div>
+  </div>
+  <div class="card .h-100">
+    <img src="images/full-marine_gardens.gif" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">One Bedroom Flat - Coleford - Gloucester</h5>
+      <p class="card-text">One bedroom, ground floor flat with double bedroom and modern kitchen.</p>
+      <a href="properties.html" class="btn btn-outline-danger">More Info</a>
+    </div>
+  </div>
+  </div>
+</div>
+</div>
+
+<div class="cstandard">
+<div class="leftfloat">
+<div class="cstandard">
+  <h3>Looking for a place to rent?</h3>
+    <h4> We've got you covered!</h4>
+    <p>Our selection of modern properties and hands-on letting management allows you to focus on the <b><i>important</i></b> things in your life.</p>
+  <a href ="properties.html"class="btn btn-danger btn-md col-3">View Properties</a>
+  <a href="php/index-contact.html" class="btn btn-outline-secondary btn-md col-3">Let's Chat</a>
+</div>
+</div>
+
+<div class="rightfloat">
+<div class="cstandard">
+  <h3>Have a property you want to let?</h3>
+  <h4>Let us help!</h4>
+  <p>Call us today to learn how we can put you in front of tenants</p>
+  <a href ="properties.html"class="btn btn-danger btn-md col-3">View Services</a>
+  <a href="php/index-contact.html" class="btn btn-outline-secondary btn-md col-3">Let's Chat</a>
+</div>
+</div>
+</div>
+
+<!-- end test -->
+
+
+
+                  <!-- <section class="contact">
+                    <h2><a href="#">CONTACT</h2>
+                    <p>By Phone:</p>
+                    <p>07834 342897</p>
+                    <p>Email Us:</p>
+                    <a href="mailto:firstview.let@btinternet.com?subject=Enquiries" id="email">firstview.let@btinternet.com</a>
+                  </section> -->
+
+
+            </div>
         </main>
 
         <footer class="main-footer">
-           <span><a href="#" id="legal">Legal Notices</span>
-           <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+          <div>
+            <span>Enquiries</span><br>
+            <a href="tel:07834 342897">07834 342897</a><br>
+            <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
+          </div>
+          <div class="resources">
+            <span>Resources</span><br>
+            <a>The Property Ombudsman</a>
+          </div>
+          <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+          <div>
+           <a href="legal.html" id="legal">Legal Notices</a><br>
+           <a href="">Privacy Policy</a>
+         </div>
+
+
+           <p class="webdev">Crafted by Firstview Lettings Ltd</p>
         </footer>
-  <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
+
+
   </body>
 </html>
