--- a/lakeview-apartments.html
+++ b/lakeview-apartments.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="firstview-lettings.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     <title>Lakeview Apartments | Firstview Lettings Ltd</title>
   </head>
   <body>
@@ -45,12 +47,6 @@
               <nav class="dropdown">
                 <ul>
                   <li><a href="properties.html">Properties</a></li>
-                        <!-- <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div> -->
                 </ul>
               </nav>
               <nav class="dropdown">
@@ -60,84 +56,116 @@
                           <li><a href="php/index-contact.html">Enquiry Form</a></li>
                           <li><a href="#">Telephone Contact: 07834 342897</a></li>
                           <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Company Details:
-                                Firstview Lettings Ltd.
-                                Registration No: 5098005
-                                Registered Office:
-                                367B Church Rd, Frampton Cotterell, Bristol, BS36 2AQ</a></li>
                         </div>
                 </ul>
               </nav>
             </nav>
     </header>
-      <main>
-        <h1> Lakeview Apartments - Fishponds - Bristol</h1>
-        <span class="normal">One bedroom 2nd floor flat in Fishponds, Bristol, BS32. Junction 2 M32, 1 mile from city centre</span>
-        <span>Availability: Currently Let</span>
-
-<div class="normal">
-          <div class="property">
-            <h2  class="subheading">Description</h2>
-              <ul class="normal">
-                <li>Modern apartment, built approx 1996 Intercom entry system.</li>
-                <li>Large lounge with separate kitchen with fitted hob and built-in oven.</li>
-                <li>Double bedroom.</li>
-                <li>Bathroom including electric shower.</li>
-                <li>Economy7 heating with night storage heaters.</li>
-                <li>Council tax band B.</li>
-              </ul>
-          </div>
-          <div class="image">
-            <img src="images/full-lakeview.jpg" alt="image of lakeview apartments">
-          </div>
-
-
-
-            <div class="property">
-              <h2 class="subheading">Accommodation Dimensions</h2>
-                <ul class="normal">
-                  <li>Lounge/Diner 14'5" x 11'9" (4.4m x 3.6m)</li>
-                  <li>Bedroom 10'9" x 8'8" (3.28m x 2.64m)</li>
-                  <li>Kitchen/Breakfast Room 11'8" x 7'2" (3.56m x 2.2m)</li>
-                </ul>
-            </div>
-            <div class="image">
-                <img src="images/plan-lakeview.gif" alt="lakeview apartments floorplan">
-            </div>
-
-
-
-            <div class="property">
-              <h2 class="subheading">Conditions</h2>
-                <p>The apartment is let unfurnished initially on a 6 month fixed term Assured Shorthold Tenancy Agreement. (copy available on request).</p>
-                <p>Satisfactory references and credit checks required. Monthly rent payable by standing order monthly in advance. Deposit required as security against damages.</p>
-            </div>
-
-
-            <div class="property">
-
-                <h2 class="subheading">Local Services & Amenities:</h2>
-                  <p>Lakeview apartments are situated within walking distance of the busy Fishponds shopping area.
-                    Tesco supermarket, petrol station and Ikea store is 1 mile away on junction 2 of the M32. This
-                    junction is also the access point to the M5/M4 motorway network just 2 miles away. The Cribbs
-                    Causeway shopping centre, which includes restaurants and multi theatre cinema complex is
-                    within 30mins drive on junction 16 of the M5.</p>
+    <main>
+          <h1 class="subp-title"> Lakeview Apartments - Fishponds - Bristol</h1>
+      <div class="cstandard">
+              <div class="layout">
+              <div id="carouselExampleIndicators" class="carousel slide col-6" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/thumb-lakeview.gif" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/plan-lakeview.gif" class="d-block w-100" alt="...">
+                  </div>
                 </div>
-
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
 
               </div>
 
 
+                <div>
+                    <h2>Features</h2>
+                    <ul>
+                      <li>Modern apartment, built approx 1996. </li>
+                      <li>Secure building with intercom entry system.</li>
+                      <li>Large lounge with separate kitchen with fitted hob and built-in oven.</li>
+                      <li>Double bedroom.</li>
+                      <li>Bathroom with electric shower.</li>
+                      <li>Economy7 heating with night storage heaters.</li>
+                      <li>One allocated parking space.</li>
+                      <li>Council tax band B.</li>
+                    </ul>
 
-
-
-      </main>
+                  <div>
+                      <h2>Accommodation Dimensions</h2>
+                      <ul>
+                        <li>Lounge/Diner 14'5" x 11'9" (4.4m x 3.6m)</li>
+                        <li>Bedroom 10'9" x 8'8" (3.28m x 2.64m)</li>
+                        <li>Kitchen/Breakfast Room 11'8" x 7'2" (3.56m x 2.2m)</li>
+                      </ul>
+                  </div>
+                  <div class="rec">
+                    <button type="button" class="btn btn-outline-primary">Enquire now</button>Or call us on <a href="tel:07834 342897">07834 342897</a>
+                  </div>
+                </div>
+              </div>
+              <div class="property">
+                <h2  class="left">About this property</h2>
+                  <!-- <ul class="cstandard"> -->
+                    <p>Enjoy a high standard of living with this modern one-bedroom apartment with fitted hob and built-in oven. Located within walking distance of local shops and amenities.
+                    A double bedroom, large lounge area and seperate kitchen provide a comfortable amount of living space. Neutrally decorated with carpet throughout, double glazing and electric shower.  Energy efficient Economy7 heating
+                  with night storage heaters ensures a warm home all year round.</p>
+                  <!-- </ul> -->
+              </div>
+              <div class="property">
+                  <h2 class="left">Local Services & Amenities:</h2>
+                    <p>Lakeview apartments are situated within walking distance of the busy Fishponds shopping area.
+                      Tesco supermarket, petrol station and Ikea store is 1 mile away on junction 2 of the M32. This
+                      junction is also the access point to the M5/M4 motorway network just 2 miles away. The Cribbs
+                      Causeway shopping centre, which includes restaurants and multi theatre cinema complex is
+                      within a 30 minute drive on junction 16 of the M5.</p>
+                  </div>
+              <div class="property">
+                <h2 class="left">Conditions</h2>
+                  <p>The apartment is let unfurnished initially on a 6 month fixed term Assured Shorthold Tenancy Agreement. (copy available on request).</p>
+                  <p>Satisfactory references and credit checks required. Monthly rent payable by standing order monthly in advance. Deposit required as security against damages.</p>
+              </div>
+              <span><a href="properties.html">View more properties</a></span>
       </div>
-      <footer class="main-footer">
-         <span><a href="legal.html" id="legal">Legal Notices</a></span>
-         <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
-      </footer>
-      <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
+    </main>
+  </div>
+
+    <footer class="main-footer">
+      <div>
+        <span>Enquiries</span><br>
+        <a href="tel:07834 342897">07834 342897</a><br>
+        <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
+      </div>
+      <div class="resources">
+        <span>Resources</span><br>
+        <a>The Property Ombudsman</a>
+      </div>
+      <span id="copy">&copy Firstview Lettings Ltd 2004-2020</span>
+      <div>
+       <a href="legal.html" id="legal">Legal Notices</a><br>
+       <a href="../privacy-statement.html">Privacy Policy</a>
+     </div>
+
+
+       <p class="webdev">Crafted by Firstview Lettings Ltd</p>
+    </footer>
+
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
   </body>
 </html>
